# marsa

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pytest.ini
backend/: .dockerignore  config.py  manual_test_mcp.py  mcp_client.py  pyproject.toml  requirements.txt  run_cli.py
backend/agents/: __init__.py  fact_checker.py  planner.py  researcher.py  source_scorer.py  synthesizer.py
backend/api/: main.py  models.py  routes.py  streaming.py
backend/eval/: __init__.py  metrics.py  mock_eval.py  run_eval.py  test_queries.json
backend/graph/: __init__.py  checkpointer.py  state.py  workflow.py
backend/mcp_servers/: document_store.py  hello.py  tavily_search.py
backend/memory/: cross_session.py
backend/middleware/: __init__.py  auth.py  request_id.py  sanitization.py
backend/scripts/: ingest_docs.py
backend/tests/: test_agents.py  test_api.py  test_cross_session.py  test_eval_metrics.py  test_graph.py  test_main.py  test_mcp_client.py  test_mcp_servers.py  test_mock_eval.py  test_placeholder.py  test_production_hardening.py  test_resilience.py  test_source_scorer.py  test_state.py  test_streaming.py  test_utils.py  test_workflow.py
backend/tests/integration/: __init__.py  test_agents_integration.py  test_data_pipeline.py  test_mcp_servers.py  test_synthesizer_integration.py  test_workflow_integration.py
backend/utils/: __init__.py  cache.py  logging.py  rate_limiter.py  resilience.py
docs/: architecture.md  design-decisions.md  resume-bullets.md  setup.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  (+3 more)
(+28 files in other folders)
